// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubtractionItem /> should render when [ready=false] 1`] = `
<withRouter(LinkContainer)
  className="spaced"
  key="Foo Bar"
  to="/subtraction/Foo Bar"
>
  <ListGroupItem
    allowFocus={false}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={8}
        xs={8}
      >
        <strong>
          Foo Bar
        </strong>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        xs={4}
      >
        <Flex
          alignContent="stretch"
          alignItems="center"
          className="pull-right"
          direction="row"
          justifyContent="flex-start"
          wrap="nowrap"
        >
          <SubtractionItemIcon
            ready={false}
          />
          <FlexItem
            alignSelf={null}
            basis="auto"
            grow={0}
            pad={true}
            shrink={1}
          >
            <strong>
              Importing
            </strong>
          </FlexItem>
        </Flex>
      </Col>
    </Row>
  </ListGroupItem>
</withRouter(LinkContainer)>
`;

exports[`<SubtractionItem /> should render when [ready=true] 1`] = `
<withRouter(LinkContainer)
  className="spaced"
  key="Foo Bar"
  to="/subtraction/Foo Bar"
>
  <ListGroupItem
    allowFocus={false}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={8}
        xs={8}
      >
        <strong>
          Foo Bar
        </strong>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        xs={4}
      >
        <Flex
          alignContent="stretch"
          alignItems="center"
          className="pull-right"
          direction="row"
          justifyContent="flex-start"
          wrap="nowrap"
        >
          <SubtractionItemIcon
            ready={true}
          />
          <FlexItem
            alignSelf={null}
            basis="auto"
            grow={0}
            pad={true}
            shrink={1}
          >
            <strong>
              Ready
            </strong>
          </FlexItem>
        </Flex>
      </Col>
    </Row>
  </ListGroupItem>
</withRouter(LinkContainer)>
`;

exports[`<SubtractionItemIcon /> should render when [ready=false] 1`] = `
<Loader
  color="#3c8786"
  size="14px"
/>
`;

exports[`<SubtractionItemIcon /> should render when [ready=true] 1`] = `
<Icon
  bsStyle="success"
  faStyle="fas"
  fixedWidth={false}
  name="check"
  pullRight={false}
/>
`;
